# struco

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
struco/: __init__.py  __main__.py  cfg.py
tests/: test_cfg.py
