[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["struco*"]

[project]
name = "struco"
version = "0.1.0"
description = "Structural code representation extraction and analysis"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
struco = "struco.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "T20"]
